@@ -2238,13 +2238,16 @@ public class Vala.Parser : CodeVisitor {
 	Signal parse_signal_declaration (Gee.List<Attribute>? attrs) throws ParseError {
 		var begin = get_location ();
 		var access = parse_access_modifier ();
-		parse_member_declaration_modifiers ();
+		var flags = parse_member_declaration_modifiers ();
 		expect (TokenType.SIGNAL);
 		var type = parse_type ();
 		string id = parse_identifier ();
 		var sig = new Signal (id, type, get_src_com (begin));
 		sig.access = access;
 		set_attributes (sig, attrs);
+		if (ModifierFlags.VIRTUAL in flags) {
+			sig.is_virtual = true;
+		}
 		expect (TokenType.OPEN_PARENS);
 		if (current () != TokenType.CLOSE_PARENS) {
 			do {
